--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IMU"
         tools:targetApi="31">
-
+        <activity
+            android:name=".review"
+            android:exported="false" />
         <activity
             android:name=".menuActivity"
             android:exported="false" />
